--- a/TODO
+++ b/TODO
@@ -30,3 +30,6 @@ Bid sheets
 Invoices
 Closing reports
 Letters
+
+ref:
+https://www.digitalocean.com/community/tutorials/how-to-serve-flask-applications-with-uswgi-and-nginx-on-ubuntu-18-04
